gcc/testsuite/rust/rustc/ui/rust-2024/unsafe-attributes/in_2024_compatibility_dg.rs
#![deny(rust_2024_compatibility)]

#[no_mangle]
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-warning "" "" { target *-*-* } .-2 }
extern "C" fn foo() {}

fn main() {}

